fix: enforce production null contracts with NullAway